--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "lint": "npm run tslint \"src/**/*.ts\"",
     "tslint": "tslint",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
