--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mind-map",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "mind-map for typescript",
-  "main": "/src",
+  "main": "/dist/index.js",
   "directories": {
     "doc": "docs",
     "example": "example"
@@ -17,6 +17,7 @@
     "lint": "npm run tslint \"src/**/*.ts\"",
     "tslint": "tslint",
     "build": "tsc",
+    "start": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
