--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.0.3",
   "description": "mind-map for typescript",
   "main": "/dist/index.js",
-  "directories": {
-    "doc": "docs",
-    "example": "example"
-  },
   "dependencies": {
     "lodash": "4.17.4",
     "tslint": "4.5.1",
@@ -17,7 +13,7 @@
     "lint": "npm run tslint \"src/**/*.ts\"",
     "tslint": "tslint",
     "build": "tsc",
-    "start": "npm run build",
+    "compile": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
