--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mind-map",
   "version": "0.0.4",
   "description": "mind-map for typescript",
-  "main": "/dist/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "lodash": "4.17.4",
     "tslint": "4.5.1",
@@ -13,7 +13,7 @@
     "lint": "npm run tslint \"src/**/*.ts\"",
     "tslint": "tslint",
     "build": "tsc",
-    "compile": "npm run build",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
