--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "./dist/index.d.ts",
   "dependencies": {
     "lodash": "4.17.4",
+    "rxjs": "5.2.0",
     "tslint": "4.5.1",
     "typescript": "2.2.1"
   },
