--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,13 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "lib": [
+      "es5",
+      "es2015",
+      "es2017",
+      "dom",
+      "scripthost"
+    ],
     "removeComments": true,
     "noEmitHelpers": false,
     "declaration": true,
