--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "mind-map for typescript",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
+  "scripts": {
+    "lint": "npm run tslint \"src/**/*.ts\"",
+    "tslint": "tslint",
+    "build": "tsc",
+    "prepublish": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "git-cz",
+    "release": "standard-version"
+  },
   "dependencies": {
     "lodash": "4.17.4",
     "rxjs": "5.2.0",
@@ -14,13 +23,10 @@
     "dist",
     "src"
   ],
-  "devDependencies": {},
-  "scripts": {
-    "lint": "npm run tslint \"src/**/*.ts\"",
-    "tslint": "tslint",
-    "build": "tsc",
-    "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "commitizen": "2.9.6",
+    "cz-conventional-changelog": "2.1.0",
+    "standard-version": "4.2.0"
   },
   "repository": {
     "type": "git",
@@ -35,5 +41,10 @@
   "bugs": {
     "url": "https://github.com/wfsovereign/jsmind/issues"
   },
-  "homepage": "https://github.com/wfsovereign/jsmind#readme"
+  "homepage": "https://github.com/wfsovereign/jsmind#readme",
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  }
 }
