--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "lodash": "4.17.4",
-    "rxjs": "5.2.0",
+    "rxjs": "^6.0.0",
     "tslint": "4.5.1",
     "typescript": "2.2.1"
   },
