--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "lodash": "4.17.4",
-    "tslint": "4.5.1",
-    "typescript": "2.2.1"
+    "lodash": "4.17.4"
   },
   "files": [
     "dist",
     "src"
   ],
   "devDependencies": {
+    "typescript": "4.0.2",
     "@types/chai": "^4.2.7",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
@@ -34,7 +33,8 @@
     "mocha": "^7.0.0",
     "nyc": "^15.0.0",
     "standard-version": "4.2.0",
-    "ts-node": "^8.5.4"
+    "ts-node": "^8.5.4",
+    "tslint": "^6.1.3"
   },
   "repository": {
     "type": "git",
